--- a/ProductSaleWebApp/ProductSaleWebApp/ProductSaleWebApp.csproj
+++ b/ProductSaleWebApp/ProductSaleWebApp/ProductSaleWebApp.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Migrations\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\" />
+    <Folder Include="Views\Motherboard\" />
+    <Folder Include="Views\Monitor\" />
+    <Folder Include="Views\Processor\" />
+    <Folder Include="Views\Ram\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
