--- a/ProductSaleWebApp/ProductSaleWebApp/ProductSaleWebApp.csproj
+++ b/ProductSaleWebApp/ProductSaleWebApp/ProductSaleWebApp.csproj
@@ -7,14 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Migrations\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Motherboard\" />
     <Folder Include="Views\Monitor\" />
     <Folder Include="Views\Processor\" />
     <Folder Include="Views\Ram\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
